--- a/daw/.vscode/settings.json
+++ b/daw/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
     "liveServer.settings.port": 81,
-    "workbench.colorTheme": "Default Dark Modern"
+    "workbench.colorTheme": "Solarized Dark"
 }
