--- a/daw/daw/src/main/resources/application.properties
+++ b/daw/daw/src/main/resources/application.properties
@@ -1,3 +1,12 @@
+# config email
+spring.mail.host=${EMAIL_HOST}
+spring.mail.port=${EMAIL_PORT}
+spring.mail.username=${EMAIL_USERNAME}
+spring.mail.password=${EMAIL_PWD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+# config  database
 spring.datasource.url = ${DB_URL}
 spring.datasource.username = ${DB_USERNAME}
 spring.datasource.password = ${DB_PASSWORD}
