Modificacion configuracion envio email

--- a/daw/daw/src/main/resources/application.properties
+++ b/daw/daw/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.mail.username=${EMAIL_USERNAME}
 spring.mail.password=${EMAIL_PWD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 
 # config  database
 spring.datasource.url = ${DB_URL}
